[workspace.package]
license = "MIT"
version = "0.4.5"
edition = "2021"
repository = "https://github.com/UniqueNetwork/chainql"

[workspace]
members = ["crates/*", "cmds/*", "frame-metadata/frame-metadata"]
resolver = "2"

[workspace.dependencies]
chainql-core = { path = "./crates/chainql-core", version = "0.4.5" }
frame-metadata = { package = "chainql-frame-metadata", path = "./frame-metadata/frame-metadata", version = "0.4.5" }

tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
jrsonnet-evaluator = { version = "0.5.0-pre95", features = ["exp-destruct", "exp-bigint", "exp-object-iteration", "exp-preserve-order"] }
jrsonnet-stdlib = { version = "0.5.0-pre95", features = ["exp-bigint", "exp-preserve-order"] }
jrsonnet-cli = { version = "0.5.0-pre95", features = ["exp-bigint", "exp-preserve-order"] }
jrsonnet-gcmodule = "0.3.4"
