[workspace]
members = ["crates/*", "cmds/*", "frame-metadata/frame-metadata"]
exclude = ["cmds/ledgerbytecode"]
resolver = "2"

[workspace.package]
license = "MIT"
version = "0.4.10"
edition = "2021"
repository = "https://github.com/UniqueNetwork/chainql"

[workspace.metadata.crane]
name = "chainql"

[workspace.dependencies]
chainql-core = { path = "./crates/chainql-core", version = "0.4.10" }
frame-metadata = { package = "chainql-frame-metadata", path = "./frame-metadata/frame-metadata", version = "0.4.10" }

tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
jrsonnet-evaluator = { version = "0.5.0-pre97", features = ["exp-destruct", "exp-bigint", "exp-object-iteration", "exp-preserve-order"] }
jrsonnet-stdlib = { version = "0.5.0-pre97", features = ["exp-bigint", "exp-preserve-order"] }
jrsonnet-cli = { version = "0.5.0-pre97", features = ["exp-bigint", "exp-preserve-order"] }
jrsonnet-gcmodule = "0.3.7"
