[package]
name = "chainql"
description = "Query substrate chains using jsonnet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chainql-core.workspace = true
tokio.workspace = true
jrsonnet-evaluator.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-cli.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
tracing-indicatif = "0.3.13"
