[package]
name = "chainql-core"
description = "Jrsonnet library for chainql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame-metadata.workspace = true
tokio.workspace = true
jrsonnet-evaluator.workspace = true
jrsonnet-gcmodule.workspace = true
hex = "0.4.3"
jsonrpsee = { version = "0.24.7", features = ["macros", "ws-client"] }
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
scale-info = "2.11.3"
scale-bits = "0.7.0"
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
peg = "0.8.3"
num-traits = "0.2.19"
num-bigint = "0.4.5"
cumulus-primitives-proof-size-hostfunction = "0.11.0"
sp-io = "39.0.0"
sp-core = { version = "35.0.0", default-features = false, features = ["std"] }
sc-executor = "0.41.0"
sp-state-machine = "0.44.0"
hyper = "1.3.1"
http = "1.1.0"
libsecp256k1 = "0.7.1"
sp-runtime = "40.0.0"
directories = "6.0.0"
futures = "0.3.31"
