[package]
name = "chainql-core"
description = "Jrsonnet library for chainql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame-metadata.workspace = true
tokio.workspace = true
jrsonnet-evaluator.workspace = true
jrsonnet-gcmodule.workspace = true
hex = "0.4.3"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
scale-info = "2.11.6"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
peg = "0.8.3"
num-traits = "0.2.19"
num-bigint = "0.4.6"
cumulus-primitives-proof-size-hostfunction = "0.14.0"
sp-io = "42.0.0"
sp-core = { version = "38.0.0", default-features = false, features = ["std"] }
sc-executor = "0.44.0"
sp-state-machine = "0.47.0"
libsecp256k1 = "0.7.1"
sp-runtime = "43.0.0"
directories = "6.0.0"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.5.7"
tracing = "0.1.41"
tracing-indicatif = "0.3.13"
jsonrpsee = { version = "0.26.0", features = ["macros", "ws-client"] }
async-trait = "0.1.89"
